--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -424,8 +424,8 @@ Along with the link to the latest stable release, this page also contains links 
 
 Daily binaries for \texttt{r-devel} are made available for \href{https://cran.r-project.org/bin/windows/base/rdevel.html}{download and installation}.
 
-\hypertarget{from-source}{%
-\subsubsection{From source}\label{from-source}}
+\hypertarget{windowsSource}{%
+\subsubsection{From source}\label{windowsSource}}
 
 Before installing R from source, some additional programs are needed, as per the \href{https://cran.r-project.org/bin/windows/base/howto-R-4.2.html}{latest documentation}:
 
@@ -1042,13 +1042,117 @@ To submit a patch, you need:
 \item
   \href{http://subversion.apache.org/}{SVN} installed on your machine.
 \item
-  The \protect\hyperlink{installR}{latest developer version of R}.
+  The latest developer version of R.
 \end{enumerate}
+
+You can retrieve the latest source code of R via:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\BuiltInTok{export} \VariableTok{TOP\_SRCDIR}\OperatorTok{=}\StringTok{"}\VariableTok{$HOME}\StringTok{/Downloads/R"}
+\FunctionTok{svn}\NormalTok{ checkout https://svn.r{-}project.org/R/trunk/ }\StringTok{"}\VariableTok{$TOP\_SRCDIR}\StringTok{"}
+\end{Highlighting}
+\end{Shaded}
+
+Depending on the operative system you might need to do some steps before that.
+The different steps required can be found in previous chapters of the book, for \protect\hyperlink{windowsSource}{Windows}, \protect\hyperlink{macos}{macOS} and \protect\hyperlink{linux}{Linux}.
 
 \hypertarget{how-to-prepare-a-patch}{%
 \section{How to prepare a patch?}\label{how-to-prepare-a-patch}}
 
-Refer to the guidelines given \href{https://www.r-project.org/bugs.html\#how-to-submit-patches}{here} for the process to prepare a patch against R-devel.
+If you have the source code in \texttt{\$TOP\_SRCDIR} you can edit the files, for example a documentation file such as \texttt{"\$TOP\_SRCDIR"/src/library/stats/man/Multinom.Rd}, to make your desired changes to that or more files.
+
+Then you should check that R still works as expected via:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\BuiltInTok{cd} \StringTok{"}\VariableTok{$TOP\_SRCDIR}\StringTok{"}
+\FunctionTok{make}\NormalTok{ check{-}devel}
+\end{Highlighting}
+\end{Shaded}
+
+If there is no test for your proposed change you can add a new regression test, following \protect\hyperlink{TestR}{the guidelines}.
+
+Then you should bring changes from the repository into the working copy, in case any other change has been introduced, and create a path.diff file with just the changes you want to propose to the R core:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{svn}\NormalTok{ update}
+\FunctionTok{svn}\NormalTok{ diff }\OperatorTok{\textgreater{}}\NormalTok{ patch.diff}
+\end{Highlighting}
+\end{Shaded}
+
+This \texttt{patch.diff} file is the one that can be proposed to the R core via \protect\hyperlink{SubmitPatches}{Bugzilla}. You can also \protect\hyperlink{PatchesReview}{ask for reviews} to the patch before proposing it to the R core via the \href{https://stat.ethz.ch/mailman/listinfo/r-devel}{r-devel mailing list} or the slack channel of the R-contributors space.
+
+\hypertarget{using-a-git-mirror}{%
+\subsection{Using a git mirror}\label{using-a-git-mirror}}
+
+Besides checking in your computer, you can use the Github mirror \href{https://github.com/r-devel/r-svn}{r-devel/r-svn} of the source code to check this patch with different configurations and OS.
+
+You should first find the file to edit, via the github interface for example:
+
+\begin{figure}
+\centering
+\includegraphics{img/rsvn_file_to_edit.png}
+\caption{Screenshot of the heading of the src/library/stats/man/Mulinom.Rd}
+\end{figure}
+
+Then you can edit it, directly in the interface or using the github interface:
+
+\begin{figure}
+\centering
+\includegraphics{img/rsvn_edit_file.png}
+\caption{Screenshot of the file src/library/stats/man/Mulinom.Rd being edited via the Github interface}
+\end{figure}
+
+Create a commit with a message describing the changes
+
+\begin{figure}
+\centering
+\includegraphics{img/rsvn_commit_message.png}
+\caption{Screenshot of the commit message}
+\end{figure}
+
+And create a pull request from the branch created to check the changes.
+
+\begin{figure}
+\centering
+\includegraphics{img/rsvn_commit_pre_PR.png}
+\caption{Screenshot of the message when opening a pull requests from the branch}
+\end{figure}
+
+Add a message and description of the svn for other users and the R core to know what is the purpose of this modification:
+
+\begin{figure}
+\centering
+\includegraphics{img/rsvn_PR_message.png}
+\caption{Screenshot of the message and content while opening a pull requests for the r-svn repository}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{img/rsvn_PR_created.png}
+\caption{Screenshot of the pull requests opened}
+\end{figure}
+
+Once the PR is submitted, some automatic checks will be triggered (they might need to be approved by some other users as per Github rules):
+
+\includegraphics{img/rsvn_PR_automatic_checks.png}
+When the checks end you will need to explore the results and asses if the results indicate a problem or not.
+
+\begin{figure}
+\centering
+\includegraphics{img/rsvn_checks_results.png}
+\caption{Screenshot of the results of the Github checks in the r-svn mirror}
+\end{figure}
+
+Once you are happy with the changes and the checks report that everything is okay you can retrieve the patch via:
+
+\texttt{https://patch-diff.githubusercontent.com/raw/r-devel/r-svn/pull/\textless{}pull\_request\_number\textgreater{}.diff}
+
+With that file you can \protect\hyperlink{SubmitPatches}{submit your patch}, remember to check if it meets the \protect\hyperlink{GoodPatches}{recommendations for good patches}.
+
+If you want to use \texttt{git} from the terminal to create the pull request (PR) to test the changes, you can use this \href{https://about.gitlab.com/images/press/git-cheat-sheet.pdf}{summary of the available git commands}.
 
 \hypertarget{GoodPatches}{%
 \section{Making good patches}\label{GoodPatches}}
@@ -1071,8 +1175,8 @@ When creating a patch for submission, there are several things that you can do t
   Each bugfix should ideally be addressed by a single patch. In particular, do not fix more than one issue in the same patch (except, if one code change fixes all of them) and do not do cosmetic changes to unrelated code in the same patch as some bugfix.
 \end{enumerate}
 
-\hypertarget{submitting-your-patch-for-review}{%
-\section{Submitting your patch for review}\label{submitting-your-patch-for-review}}
+\hypertarget{SubmitPatches}{%
+\section{Submitting your patch for review}\label{SubmitPatches}}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -1082,8 +1186,8 @@ When creating a patch for submission, there are several things that you can do t
   Patch in response to an unreported issue or bug report: Assuming you already performed a search on Bugzilla for a pre-existing issue or bug and did not find the issue or bug reported, you need to create a new bug report and include your patch with it. Please fill in as much relevant detail as possible to prevent reviewers from having to delay reviewing your patch because of lack of information. Include (mostly as the first sentence), a to-the-point explanation of what the purpose of the patch is. This sentence should not be in the descriptive form, rather an imperative form will be more suitable here. If this is not enough detail for a patch, a new paragraphs(s) can be added to explain in proper depth what has happened. The details should be good enough that a core developer reading it understands the justification for the change.
 \end{enumerate}
 
-\hypertarget{getting-your-patch-reviewed}{%
-\section{Getting your patch reviewed}\label{getting-your-patch-reviewed}}
+\hypertarget{PatchesReview}{%
+\section{Getting your patch reviewed}\label{PatchesReview}}
 
 To begin with, please be patient. There are many more people submitting patches than there are people capable of reviewing your patches. Getting your patch reviewed requires a reviewer to have the spare time and motivation to look at your patch. We cannot force anyone to review patches and no one is employed to look at patches.
 
