bettinagruen published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -231,7 +231,7 @@ The tools required to build R and R packages are also discussed.
 For the most up to date and complete instructions you can check the \href{https://cran.r-project.org/doc/manuals/r-devel/R-admin.html}{R installation and administration manual} .
 
 \hypertarget{the-r-source-code}{%
-\section{The R Source Code}\label{the-r-source-code}}
+\section{The R source code}\label{the-r-source-code}}
 
 R uses \href{https://subversion.apache.org/}{svn} as a version control tool hosted at \url{https://svn.r-project.org/R/} and uses a `major.minor.patchlevel' version numbering scheme\footnote{Also known as \href{https://en.wikipedia.org/wiki/Software_versioning\#Semantic_versioning}{semantic versioning}}.
 
