bettinagruen published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -117,7 +117,7 @@
 
 \title{R Development Guide}
 \author{R Contribution Working Group}
-\date{2022-12-02}
+\date{2022-12-03}
 
 \begin{document}
 \maketitle
@@ -390,10 +390,10 @@ If we don't want to build R in a different directory than the source code we can
 \end{Highlighting}
 \end{Shaded}
 
-Once you successfully build R from source you can modify R source code to fix an issue: Prepare a patch (See \href{https://www.r-project.org/bugs.html\#how-to-submit-patches}{this guide}) and after checking that R works as intended (\texttt{make\ check-devel}) submit the patch for the R core consideration.
+Once you successfully built R from source you can modify the R source code to fix an issue: Prepare a patch (See \href{https://www.r-project.org/bugs.html\#how-to-submit-patches}{this guide}) and after checking that R works as intended (\texttt{make\ check-devel}) submit the patch for consideration by R Core.
 (See the \protect\hyperlink{FixBug}{lifecycle of a patch} chapter).
 
-To use the \texttt{r-devel} version in RStudio to you can do the following:
+To use the \texttt{r-devel} version in RStudio, you can do the following:
 
 \begin{Shaded}
 \begin{Highlighting}[]
