bettinagruen published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -567,7 +567,7 @@ Before installing R from source, some additional programs are needed, as per the
 \item
   \href{https://cran.r-project.org/bin/windows/base/rw-FAQ.html}{R for Windows FAQ}
 \item
-  \href{https://cran.r-project.org/bin/windows/Rtools/}{Rtools40 manual for Windows}
+  \href{https://cran.r-project.org/bin/windows/Rtools/}{RTools toolchains for Windows}
 \item
   \href{https://cran.r-project.org/doc/FAQ/R-FAQ.html}{R FAQ}
 \end{enumerate}
