llrs published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -117,7 +117,7 @@
 
 \title{R Development Guide}
 \author{R Contribution Working Group}
-\date{2022-12-03}
+\date{2023-01-26}
 
 \begin{document}
 \maketitle
@@ -433,7 +433,7 @@ Before installing R from source, some additional programs are needed, as per the
 \def\labelenumi{\arabic{enumi}.}
 \item
   \href{https://cran.r-project.org/bin/windows/Rtools/}{Rtools} is the suggested toolchain bundle for building R base and R packages containing compiled code on Windows.
-  The latest \href{https://cran.r-project.org/bin/windows/Rtools/rtools42/rtools.html}{version of Rtools42} can be installed using the \href{https://cran.r-project.org/bin/windows/Rtools/rtools42/files/}{Rtools installer rtools42-XXXX-XXX.exe}.
+  The latest \href{https://cran.r-project.org/bin/windows/Rtools/rtools43/rtools.html}{version of Rtools} can be installed using the \href{https://cran.r-project.org/bin/windows/Rtools/rtools43/files/}{Rtools installer rtools43-XXXX-XXX.exe}.
 \item
   A LaTeX compiler is needed to install and build R, check packages and build manuals.
   On CRAN, MiKTeX is used, which can be downloaded from \url{https://miktex.org}.
