hturner published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -117,7 +117,7 @@
 
 \title{R Development Guide}
 \author{R Contribution Working Group}
-\date{2023-01-26}
+\date{2023-03-09}
 
 \begin{document}
 \maketitle
@@ -989,8 +989,8 @@ We know that it is in the stats package as we see that when we print complete.ca
 \end{enumerate}
 
 \begin{verbatim}
-compcases extension:c
-lowesw extension:f
+compcases path:*.c
+lowesw path:*.f
 \end{verbatim}
 
 similarly for grep
