hturner published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -549,6 +549,8 @@ Before installing R from source, some additional programs are needed, as per the
 \hypertarget{macos}{%
 \subsection{macOS}\label{macos}}
 
+This section will be added after the official {[}installation instructions for macOS in the R installation and administration manual{]}(\href{https://cran.r-project.org/doc/manuals/r-devel/R-admin.html\#macOS}{https://cran.r-project.org/doc/manuals/r-devel/R-admin.html} have been updated for R 4.3.0.
+
 \hypertarget{see-also}{%
 \section{See also}\label{see-also}}
 
