hturner published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -397,7 +397,7 @@ To use the \texttt{r-devel} version in RStudio, you can do the following:
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\BuiltInTok{export} \VariableTok{RSTUIDO\_WHICH\_R}\OperatorTok{=}\StringTok{"}\VariableTok{$BUILDDIR}\StringTok{/bin/R"}
+\BuiltInTok{export} \VariableTok{RSTUDIO\_WHICH\_R}\OperatorTok{=}\StringTok{"}\VariableTok{$BUILDDIR}\StringTok{/bin/R"}
 \BuiltInTok{cd} \StringTok{"}\VariableTok{$TOP\_SRCDIR}\StringTok{"}
 \ExtensionTok{rstudio}
 \end{Highlighting}
