llrs published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -117,7 +117,7 @@
 
 \title{R Development Guide}
 \author{R Contribution Working Group}
-\date{2023-04-05}
+\date{2023-04-17}
 
 \begin{document}
 \maketitle
@@ -474,7 +474,7 @@ Before installing R from source, some additional programs are needed, as per the
 \begin{Shaded}
 \begin{Highlighting}[]
 \BuiltInTok{cd} \StringTok{"}\VariableTok{$TOP\_SRCDIR}\StringTok{"}
-\FunctionTok{wget} \AttributeTok{{-}np} \AttributeTok{{-}nd} \AttributeTok{{-}r} \AttributeTok{{-}l1} \AttributeTok{{-}A} \StringTok{\textquotesingle{}tcltk{-}*.zip\textquotesingle{}}\NormalTok{ https://cran.r{-}project.org/bin/windows/Rtools/rtools42/files/}
+\FunctionTok{wget} \AttributeTok{{-}np} \AttributeTok{{-}nd} \AttributeTok{{-}r} \AttributeTok{{-}l1} \AttributeTok{{-}A} \StringTok{\textquotesingle{}tcltk{-}*.zip\textquotesingle{}}\NormalTok{ https://cran.r{-}project.org/bin/windows/Rtools/rtools43/files/}
 \FunctionTok{unzip} \StringTok{"tcltk{-}*.zip"}
 \end{Highlighting}
 \end{Shaded}
@@ -484,7 +484,7 @@ Before installing R from source, some additional programs are needed, as per the
 \begin{Shaded}
 \begin{Highlighting}[]
 \BuiltInTok{export} \VariableTok{PATH}\OperatorTok{=}\StringTok{"/x86\_64{-}w64{-}mingw32.static.posix/bin:}\VariableTok{$PATH}\StringTok{"}
-\BuiltInTok{export} \VariableTok{PATH}\OperatorTok{=}\StringTok{"/c/Program\textbackslash{} Files/MiKTeX/miktex/bin/x64:}\VariableTok{$PATH}\StringTok{"}
+\BuiltInTok{export} \VariableTok{PATH}\OperatorTok{=}\StringTok{"/c/Program Files/MiKTeX/miktex/bin/x64:}\VariableTok{$PATH}\StringTok{"}
 \BuiltInTok{export} \VariableTok{TAR}\OperatorTok{=}\StringTok{"/usr/bin/tar"}
 \BuiltInTok{export} \VariableTok{TAR\_OPTIONS}\OperatorTok{=}\StringTok{"{-}{-}force{-}local"}
 \end{Highlighting}
@@ -549,7 +549,7 @@ Before installing R from source, some additional programs are needed, as per the
 \hypertarget{macos}{%
 \subsection{macOS}\label{macos}}
 
-This section will be added after the official {[}installation instructions for macOS in the R installation and administration manual{]}(\href{https://cran.r-project.org/doc/manuals/r-devel/R-admin.html\#macOS}{https://cran.r-project.org/doc/manuals/r-devel/R-admin.html} have been updated for R 4.3.0.
+This section will be added after the official \href{https://cran.r-project.org/doc/manuals/r-devel/R-admin.html\#macOS}{installation instructions for macOS in the R installation and administration manual} have been updated for R 4.3.0.
 
 \hypertarget{see-also}{%
 \section{See also}\label{see-also}}
