--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -117,7 +117,7 @@
 
 \title{R Development Guide}
 \author{R Contribution Working Group}
-\date{2023-05-04}
+\date{2023-05-10}
 
 \begin{document}
 \maketitle
@@ -1283,7 +1283,9 @@ This chapter is aimed at authors and potential authors of R documentation provid
 \hypertarget{guidelines-for-writing-r-help-files}{%
 \section{Guidelines for writing R help files}\label{guidelines-for-writing-r-help-files}}
 
-Following are the suggested guidelines while creating the system help files in the .Rd format. A example of the .Rd format is available for \href{https://svn.r-project.org/R/trunk/src/library/base/man/mean.Rd}{mean.Rd}. These are intended for writing the core documentations but may also be useful for package writers. Extensive details of writing R documentation files can be found in the \href{https://cran.r-project.org/doc/manuals/r-release/R-exts.html\#Writing-R-documentation-files}{Writing R Extensions} manual.
+This section summarises the \href{https://developer.r-project.org/Rds.html}{recommended style for writing the R help files}. The R help files are written in ``R documentation'' (Rd) format, a markup language which resembles LaTeX. An example of the .Rd format is available for \href{https://svn.r-project.org/R/trunk/src/library/base/man/mean.Rd}{mean.Rd}. These are intended for writing the core documentations but may also be useful for package writers. Extensive details of writing R documentation files can be found in the \href{https://cran.r-project.org/doc/manuals/r-release/R-exts.html\#Writing-R-documentation-files}{Writing R Extensions} manual.
+
+Note: Many R package authors use the R package \href{https://cran.r-project.org/web/packages/roxygen2/index.html}{roxygen2} to write documentation (which eventually creates the .Rd files), however, in this guide we focus on .Rd files only because the manual pages for the base distribution are written directly as .Rd files.
 
 There are three main parts of an .Rd file:
 
@@ -1370,8 +1372,6 @@ All the above information is included in a .Rd file within a series of sections 
     For giving an address for a publisher use the format \texttt{New\ York:\ Springer-Verlag}.
   \end{itemize}
 \end{enumerate}
-
-More guidelines for writing .Rd files can be found \href{https://developer.r-project.org/Rds.html}{here}.
 
 The language used in the documentations should follow these basic rules:
 
