--- a/07-documenting_R.Rmd
+++ b/07-documenting_R.Rmd
@@ -89,7 +89,8 @@ The [R manuals](https://cran.r-project.org/manuals.html) are a part of the [R so
 
 Note: 
 
-- Every manual is associated with a particular version of R, hence please consider the version of R when looking for the manuals.
+- Every manual is associated with a particular version of R, so you should check the version before reporting a bug.
+- The [R manuals](https://cran.r-project.org/manuals.html) page has links for the [three types of release](https://contributor.r-project.org/rdevguide/GetStart.html#the-r-source-code): `r-release`, `r-patched` and `r-devel`.  These nicknames appear in the URLs, e.g. https://cran.r-project.org/doc/manuals/r-release/R-intro.html.
 - The [Texinfo manual](https://www.gnu.org/software/texinfo/) should be referred to for [how to mark up text](https://www.gnu.org/software/texinfo/manual/texinfo/texinfo.html).
 
 ## Helping with documentation
