SaranjeetKaur published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -117,7 +117,7 @@
 
 \title{R Development Guide}
 \author{R Contribution Working Group}
-\date{2023-06-17}
+\date{2023-06-18}
 
 \begin{document}
 \maketitle
@@ -1388,8 +1388,14 @@ The Developer's Guide (what you are reading now) uses the same process as the ma
 
 Our dev guide workflow uses continuous integration and deployment so changes to the dev guide are normally published when the pull request is merged. \protect\hyperlink{how-to-contribute-to-this-guide}{How to contribute to this guide from the introduction.}
 
-\hypertarget{instructions-for-reporting-the-cran-policy-bugs-discussion-in-slack-random-channel}{%
-\section{Instructions for reporting the CRAN policy bugs -- discussion in slack (random channel)}\label{instructions-for-reporting-the-cran-policy-bugs-discussion-in-slack-random-channel}}
+\hypertarget{reporting-documentation-bugs}{%
+\section{Reporting documentation bugs}\label{reporting-documentation-bugs}}
+
+If you find some typo or problem on the \href{https://cran.r-project.org}{CRAN} webpages you can write a polite email to \texttt{CRAN@r-project.org} to report it. As an alternative, one can also write to the R-devel mailing list or submit a bug report via R's Bugzilla.
+
+For improvements of the R-manuals or reporting typos or bugs in the R-manuals, submit a bug report to R's Bugzilla.
+
+For reporting bugs or typos on the webpages or documentation about a particular package, write to the corresponding package maintainer. To find the maintainer of a package, use the command \texttt{maintainer("package-name")}.
 
 \textbf{Note}:
 
