SaranjeetKaur published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -117,7 +117,7 @@
 
 \title{R Development Guide}
 \author{R Contribution Working Group}
-\date{2023-06-18}
+\date{2023-07-01}
 
 \begin{document}
 \maketitle
@@ -1206,7 +1206,7 @@ It may take longer before your patch is accepted and applied or rejected, someti
 \hypertarget{Doc}{%
 \chapter{Documenting R}\label{Doc}}
 
-The R language has a substantial body of documentation, much of which is contributed by various authors. The help files for R functions are written in `R documentation' (.Rd) file format. It is a simple markup language with close resemblance to LaTeX. The .Rd file format can be further processed into a variety of formats, including LaTeX, HTML, and plain text.
+The R language has a substantial body of documentation, much of which is contributed by various authors. The help files for R functions are written in `R documentation' (\texttt{.Rd}) file format. It is a simple markup language with close resemblance to LaTeX. The \texttt{.Rd} file format can be further processed into a variety of formats, including LaTeX, HTML, and plain text.
 
 This chapter describes the styleguide for R's documentation, how to document for R, report and review bugs (and/or suggest corrections for them) in the existing documentation. If you are interested in contributing to R's documentation, your contributions are more than welcome.
 
@@ -1222,11 +1222,11 @@ This chapter is aimed at authors and potential authors of R documentation provid
 \hypertarget{guidelines-for-writing-r-help-files}{%
 \section{Guidelines for writing R help files}\label{guidelines-for-writing-r-help-files}}
 
-This section summarises the \href{https://developer.r-project.org/Rds.html}{recommended style for writing the R help files}. The R help files are written in ``R documentation'' (Rd) format, a markup language which resembles LaTeX. An example of the .Rd format is available for \href{https://svn.r-project.org/R/trunk/src/library/base/man/mean.Rd}{mean.Rd}. These are intended for writing the core documentations but may also be useful for package writers. Extensive details of writing R documentation files can be found in the \href{https://cran.r-project.org/doc/manuals/r-release/R-exts.html\#Writing-R-documentation-files}{Writing R Extensions} manual.
+This section summarises the \href{https://developer.r-project.org/Rds.html}{recommended style for writing the R help files}. The R help files are written in ``R documentation'' (Rd) format, a markup language which resembles LaTeX. An example of the \texttt{.Rd} format is available for \href{https://svn.r-project.org/R/trunk/src/library/base/man/mean\%60.Rd\%60}{mean\texttt{.Rd}}. These are intended for writing the core documentations but may also be useful for package writers. Extensive details of writing R documentation files can be found in the \href{https://cran.r-project.org/doc/manuals/r-release/R-exts.html\#Writing-R-documentation-files}{Writing R Extensions} manual.
 
-Note: Many R package authors use the R package \href{https://cran.r-project.org/web/packages/roxygen2/index.html}{roxygen2} to write documentation (which eventually creates the .Rd files), however, in this guide we focus on .Rd files only because the manual pages for the base distribution are written directly as .Rd files.
+Note: Many R package authors use the R package \href{https://cran.r-project.org/web/packages/roxygen2/index.html}{roxygen2} to write documentation (which eventually creates the \texttt{.Rd} files), however, in this guide we focus on \texttt{.Rd} files only because the manual pages for the base distribution are written directly as \texttt{.Rd} files.
 
-There are three main parts of an .Rd file:
+There are three main parts of an \texttt{.Rd} file:
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -1238,7 +1238,7 @@ There are three main parts of an .Rd file:
   \textbf{Footer}: This part is optional. Usually the keyword information is included here.
 \end{enumerate}
 
-All the above information is included in a .Rd file within a series of sections with standard names (user-defined sections are also allowed). These sections are discussed below:
+All the above information is included in a \texttt{.Rd} file within a series of sections with standard names (user-defined sections are also allowed). These sections are discussed below:
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
