SaranjeetKaur published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -762,6 +762,9 @@ If you like to see how bugs are reported on Bugzilla, here are some examples:
   \href{https://bugs.r-project.org/bugzilla/page.cgi?id=bug-writing.html}{Bugzilla guidelines of reporting a bug}
 \end{enumerate}
 
+\hypertarget{IssueTrack}{%
+\chapter{Issue Tracking}\label{IssueTrack}}
+
 Base R uses \href{https://bugs.r-project.org/}{Bugzilla} for issue tracking and reporting bugs.
 
 \hypertarget{how-to-contribute-to-issue-tracking}{%
