SaranjeetKaur published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -1277,7 +1277,7 @@ It may take longer before your patch is accepted and applied or rejected, someti
 \end{enumerate}
 
 \hypertarget{Doc}{%
-\chapter{Documenting R}\label{Doc}}
+\chapter{Documenting}\label{Doc}}
 
 R has a substantial body of documentation, comprising help files for the core packages and a set of manuals aimed at users (An Introduction to R, R Data Import/Export), system administrators (R Installation and Administration) and developers (Writing R Extensions, The R language definition, and R Internals). This documentation was developed by the R Core Team with input from external contributors. The continuing involvement of the user community is important in maintaining this valuable documentation.
 
