SaranjeetKaur published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -767,7 +767,7 @@ Once you confirm a bug exists, you need to submit a bug report so that it gets f
 \item
   The bug report for R-Core supported packages, their documentations, and/ or a bug report for the R language itself can be submitted either to R-devel, \href{https://www.r-project.org/posting-guide.html\#which_list}{see posting guide}, or to \href{https://bugs.r-project.org/bugzilla/}{Bugzilla}. In the future, we hope to have an option to report an issue to the \href{https://github.com/r-devel/r-svn/issues}{GitHub Mirror of the R svn server}.
 \item
-  If you want to submit the bug report using \protect\hyperlink{Bugzilla}{Bugzilla}, please ensure that you have a Bugzilla account. To get a Bugzilla account, please send an e-mail to \texttt{bug-report-request@r-project.org} from the address that you want to use as your login. In this e-mail, briefly explain why you need an account. A volunteer shall then create a Bugzilla account and add you to R's Bugzilla members.
+  In order to report bugs, as well as fixes, using \protect\hyperlink{Bugzilla}{Bugzilla}, please ensure that you have a \protect\hyperlink{bugzilla-account}{Bugzilla account}
 \item
   Please ensure whether the bug is already fixed (in the upcoming changes in R) or reported (search for it from those already reported on Bugzilla, either on \href{https://bugs.r-project.org/bugzilla/query.cgi}{search existing bug reports}, using the \href{https://bugs.r-project.org/bugzilla/query.cgi?format=advanced}{advanced search} option here, or \href{https://bugs.r-project.org/bugzilla/buglist.cgi?bug_file_loc_type=allwordssubstr\&bug_status=NEW\&bug_status=ASSIGNED\&bug_status=CONFIRMED\&bug_status=REOPENED\&bug_status=UNCONFIRMED\&bugidtype=include\&chfieldto=Now\&cmdtype=doit\&emailassigned_to1=1\&emailassigned_to2=1\&emailcc2=1\&emailreporter2=1\&emailtype1=substring\&emailtype2=substring\&field0-0-0=noop\&long_desc_type=substring\&order=bugs.delta_ts\%20desc\&query_format=advanced\&short_desc_type=allwordssubstr\&type0-0-0=noop}{show open bugs new-to-old}).
 \end{enumerate}
